--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,10 @@ model-viewer {
   outline: 1px solid #4285f4;
 }
 
+h1, h2{
+    text-align: center;
+  }
+
 @keyframes circle {
   from { transform: translateX(-50%) rotate(0deg) translateX(50px) rotate(0deg); }
   to   { transform: translateX(-50%) rotate(360deg) translateX(50px) rotate(-360deg); }
